--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+	<script src="./js/main.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    	<div id="cardListContainer">
+		<div id="cardList"></div>
+	</div>
+	<div id="cardDetailContainer">
+		<div id="cardList"></div>
+	</div>
   </body>
 </html>
