--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<script src="./js/main.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='stylesheets/style.css' />
   </head>
   <body>
-    	<div id="cardListContainer">
-		<div id="cardList"></div>
+    <div id="cardListContainer" class="sidebar">
+		<div id="cardList" class="deck"></div>
 	</div>
-	<div id="cardDetailContainer">
-		<div id="cardList"></div>
+	<div id="cardDetailContainer" class="main">
+		<div id="cardDisplay" class="center"></div>
+        <div class="form">
+            <div id="addCard">
+                <span>Name: <input type="text" id='name' name='name'></span><br>
+                <span>Username: <input type="text" id='username' name='username'></span><br>
+                <span>Title: <input type="text" id='title' name='title'></span><br>
+                <span>Content: <input type="text" id='body' name='body'></span><br>
+                <button type="button" id="submit" onclick="addCard()">Submit</button>
+            </div>
+            <button type="button" onclick="deleteCard()">Delete Selected Card</button>
+        </div>
 	</div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="javascripts/lodash.js"></script>
+    <script src="javascripts/main.js"></script>
   </body>
 </html>
