--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,8 @@
 		<div id="cardList" class="deck"></div>
 	</div>
 	<div id="cardDetailContainer" class="main">
-		<div id="cardDisplay" class="center"></div>
+		<img src="./images/StudyTimeLogo.png" alt="">
+        <div id="cardDisplay" class="center"></div>
         <div class="form">
             <div id="addCard">
                 <span>Name: <input type="text" id='name' name='name'></span><br>
